# BreadEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  clang-tools.lua  compile.lua
inc/glad/include/glad/: gl.h
shaders/: default.frag  default.vert
src/: pch.h
src/App/: CMakeLists.txt  app.cpp  entrypoint.cpp
src/App/Platform/: linux.inl
src/EventSystem/: CMakeLists.txt  event.hpp  eventSystem.cpp  listener.hpp
src/Interface/: CMakeLists.txt  window-events.cpp  window-events.hpp  window.cpp  window.hpp
src/Interface/include/Interface/: window.h
src/Renderer/: CMakeLists.txt  defines.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/Renderer/include/Renderer/: renderer.h
src/Toast/: CMakeLists.txt  engine.cpp  engine.hpp
src/Toast/Platform/: linux.inl
src/Toast/include/Toast/: engine.h  entrypoint.h
src/Utils/: CMakeLists.txt  file.cpp  file.hpp  log.cpp  log.hpp  time.hpp  tracy.cpp
src/Utils/EventSystem/: eventSystem.cpp  eventSystem.hpp  listener.hpp
src/Utils/include/Utils/: event-system.h  file.h  log.h  time.h  utils.h
